# smarthomeRESTApp

./: .gitignore  LICENSE  README.md  go.mod  go.sum  main.go
.github/workflows/: publish.yml
accessors/: database.go
configuration/: configuration.go
controllers/aggregates/: controllers.go  get_heatpump_aggregates_daily.go
controllers/locations/: controllers.go  get_location.go  get_locations.go
envs/: dev
models/: device.go  location.go
src/: BUILD.bazel  WORKSPACE.bazel  cleanRebuild.sh
src/configuration/: configuration.go
src/controllers/aggregates/: controllers.go  get_heatpump_aggregates_daily.go
src/controllers/locations/: controllers.go  get_location.go  get_locations.go
src/demo/: BUILD.bazel  go.mod  go.sum  testapi.go
src/models/: heatpumpPowerAggregates.go
src/restService/: .gitignore  BUILD.bazel  Dockerfile  Makefile  go.mod  go.sum  main.go
src/restService/accessors/: BUILD.bazel  database.go
src/restService/configuration/: BUILD.bazel  configuration.go
src/restService/controllers/aggregates/: BUILD.bazel  controllers.go  get_electric_energy_flow_daily.go  get_electric_energy_flow_monthly.go  get_electric_energy_flow_yearly.go  get_electric_energy_money_flow_daily.go  get_electric_energy_money_flow_monthly.go  get_electric_energy_money_flow_yearly.go  get_heatpump_aggregates_daily.go  get_heatpump_aggregates_monthly.go  get_heatpump_aggregates_yearly.go
src/restService/controllers/locations/: BUILD.bazel  controllers.go  get_location.go  get_locations.go
src/restService/middleware/: BUILD.bazel  errorhandler.go  ginlogging.go
src/restService/models/: BUILD.bazel  devicetype.go  electricEnergyFlow.go  electricEnergyMoneyFlow.go  heatpumpPowerAggregatesDaily.go  heatpumpPowerAggregatesMonthly.go  heatpumpPowerAggregatesYearly.go
src/webapp/: .env  .env.production  package-lock.json  package.json
src/webapp/src/: App.vue  ChartElectricEnergyFlowDaily.vue  ChartElectricEnergyFlowMonthly.vue  ChartElectricEnergyFlowPVDaily.vue  ChartElectricEnergyFlowPVMonthly.vue  ChartElectricEnergyFlowPVYearly.vue  ChartElectricEnergyFlowYearly.vue  ChartElectricEnergyMoneyDaily.vue  ChartElectricEnergyMoneyMonthly.vue  ChartElectricEnergyMoneyYearly.vue  ChartHeatpumpDaily.vue  ChartHeatpumpMonthly.vue  ChartHeatpumpYearly.vue
src/webapp/src/plugins/: vuetify.js
