load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "demo_lib",
    srcs = ["testapi.go"],
    importpath = "mstraubAC/smarthome-restService/demo",
    visibility = ["//visibility:private"],
    deps = [
        "@io_opentelemetry_go_contrib_instrumentation_net_http_otelhttp//:go_default_library",
        "@io_opentelemetry_go_otel//:go_default_library",
        "@io_opentelemetry_go_otel//attribute:go_default_library",
    ],
)

go_binary(
    name = "demo",
    embed = [":demo_lib"],
    visibility = ["//visibility:public"],
)
